fixed top row spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,8 +2,9 @@
 #desc-div {
     background-color: whitesmoke;
     border-radius: 15px;
-    width: 55%;
+    width: 66%;
     height: 100%;
+    margin-right: 0%;
 }
 
 #pie-div {
@@ -33,6 +34,9 @@
 #card-div {
     margin-bottom: 0%;
     height: 100%;
+    width: 34%;
+    float: right;
+    margin-left: 0%;
 }
 
 
@@ -41,7 +45,9 @@
     border-radius: 15px;
     height: 100%;
     padding: 1%;
-    width: 25%;
+    width: 30%;
+    float: right;
+    margin-left: 0%;
 }
 
 #sponsors-card {
@@ -49,15 +55,19 @@
     border-radius: 15px;
     height: 100%;
     padding: 1%;
-    width: 25%;
+    width: 30%;
+    float: right;
+    margin-left: 3%;
 }
 
 #years-card {
     background-color: whitesmoke;
     border-radius: 15px;
     height: 100%;
-    width: 25%;
     padding: 1%;
+    width: 30%;
+    float: right;
+    margin-left: 3%;
 }
 
 
@@ -80,7 +90,7 @@
 }
 
 #whole-div {
-    height: 98vh;
+    height: 97vh;
     background-color: white;
 }
 
@@ -110,7 +120,7 @@
 }
 
 h1 {
-    margin-top: 0%;
+    margin-top: 1%;
     margin-left: 2%;
     font-size: 30px;
     font-weight: 500;
@@ -130,6 +140,9 @@ h4 {
 }
 
 .card-text {
-    font-size: 15px;
-    padding: 0%;
+    font-size: 20px;
+    width: 100%;
+    height: 100%;
+    padding: .5%;
+    margin-left: 1%;
 }
